--- a/chaliya.html
+++ b/chaliya.html
@@ -2,13 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>picofChaliya</title>
+    <title>..</title>
     <link rel="stylesheet" href="css/styles1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
 
   </head>
   <Body >
     <div class="hi">
-      <p>Hello</p>
+      <p>everytime I meet you,<br />
+i find a new reason<br />
+to be fond of you.<br />
+just like the universe,<br />
+my fondness for you<br />
+is ever-expanding.</p>
 
     </div>
   </body>
