--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <div class="middle-container">
     <hr>
       <a class="btn" href="chaliya.html">CLICK HERE <br />
-      (only if ur chaliya)</a>
+      (only if ur dolly)</a>
   </div>
 
 
   <div class="bottom-container">
 
-    <p class="copyright" >© 2021 Ishaan Bhondele.</p>
+    <p class="copyright" >With Love, Sweetu <3</p>
   </div>
 
 
